--- a/index.html
+++ b/index.html
@@ -1,130 +1,165 @@
-
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Board Game Recommendations</title>
-	<style>
-		body {
-			background-color: #F8F8FF;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-		}
-		h1 {
-			text-align: center;
-			margin-top: 50px;
-			color: #000080;
-			font-size: 48px;
-			text-shadow: 2px 2px #ADD8E6;
-		}
-		form {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			margin-top: 50px;
-		}
-		label {
-			font-size: 24px;
-			margin-bottom: 20px;
-		}
-		input[type="text"], select {
-			width: 50%;
-			padding: 10px;
-			border: none;
-			border-radius: 5px;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-			font-size: 18px;
-			margin-bottom: 20px;
-		}
-		button[type="submit"] {
-			background-color: #000080;
-			color: #FFFFFF;
-			padding: 10px 20px;
-			border: none;
-			border-radius: 5px;
-			font-size: 18px;
-			cursor: pointer;
-			margin-top: 20px;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-		}
-		button[type="submit"]:hover {
-			background-color: #ADD8E6;
-			color: #000080;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-		}
-		#recommendations {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-evenly;
-			margin-top: 50px;
-		}
-		.game {
-			background-color: #FFFFFF;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-			border-radius: 5px;
-			padding: 20px;
-			margin: 20px;
-			width: 30%;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			text-align: center;
-		}
-		.game img {
-			max-width: 100%;
-			max-height: 200px;
-			margin-bottom: 20px;
-		}
-		.game h2 {
-			font-size: 24px;
-			margin-bottom: 10px;
-		}
-		.game p {
-			font-size: 18px;
-			line-height: 1.5;
-		}
-	</style>
+    <title>Board Game Recommendations</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: white;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #FFFFFF;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-size: 18px;
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        input[type="text"] {
+            font-size: 18px;
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            border: 1px solid #CCCCCC;
+            margin-bottom: 20px;
+        }
+
+        select {
+            font-size: 18px;
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            border: 1px solid #CCCCCC;
+            margin-bottom: 20px;
+        }
+
+        button[type="submit"] {
+            background-color: #4CAF50;
+            color: #FFFFFF;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #3E8E41;
+        }
+
+    <style>
+        #logo {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+	  #recommendations {
+            margin-top: 20px;
+            padding: 20px;
+            border-radius: 5px;
+            background-color: #F7F7F7;
+        }
+    </style>
+
+    </style>
 </head>
 <body>
-	<header>
-		<h1>Board Game Recommendations</h1>
-	</header>
-	<main>
-		<form method="POST" action="http://grimmthething.pythonanywhere.com/recommendations" target="popup" onsubmit="window.open('about:blank','popup','width=600,height=400')">
-			<label for="preferences">Enter your board game preferences:</label>
-			<input type="text" id="preferences" name="preferences" required>
-			<label for="numPlayers">Number of players:</label>
-			<select id="numPlayers" name="numPlayers">
-				<option value="Any">Any</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5+">5+</option>
-			</select>
-			<label for="theme">Theme:</label>
-			<select id="theme" name="theme">
-				<option value="Any">Any</option>
-				<option value="Fantasy">Fantasy</option>
-				<option value="Sci-Fi">Sci-Fi</option>
-				<option value="Horror">Horror</option>
-				<option value="Historical">Historical</option>
-				<option value="Party">Party</option>
-			</select>
-			<button type="submit">Get recommendations</button>
-		</form>
-	</main>
-	<script>
-		// Create a popup window to display the recommendations
-		window.open('about:blank', 'popup', 'width=600,height=400');
 
-		// Handle the form submission
-		document.querySelector('form').addEventListener('submit', function(event) {
-			event.preventDefault();
-			var form = event.target;
-			var popup = window.open('about:blank', 'popup', 'width=600,height=400');
-			form.target = 'popup';
-			form.submit();
-		});
-	</script>
+    <p style="font-size: 3em; display: inline-block;">
+    	<img id="logo" src="https://grimmthething.github.io/BGR/bglogo2nbg.png" height="60" width="30" alt="Logo">    	Board Game Recommendations
+    </p>
+    <form id="recommendation-form" method="POST">
+        <label for="preferences">Enter your board game preferences:</label>
+        <input type="text" id="preferences" name="preferences" required>
+        <br>
+        <br>
+        <label for="player-count">Number of players:</label>
+        <select id="player-count" name="player-count">
+            <option value="any">Any</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7+">7+</option>
+        </select>
+        <br>
+        <br>
+        <label for="duration">Game duration:</label>
+        <select id="duration" name="duration">
+            <option value="any">Any</option>
+            <option value="short">Short (&lt; 30 minutes)</option>
+            <option value="medium">Medium (30-60 minutes)</option>
+            <option value="long">Long (&gt; 60 minutes)</option>
+        </select>
+        <br>
+        <br>
+        <button type="submit">Get recommendations</button>
+    </form>
+    <div id="recommendations"></div>
+    <div id="spinner" class="spinner"></div>
+    <style>
+        .spinner {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid #3498db;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            z-index: 9999;
+            display: none;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
+
+    <script>
+        const form = document.getElementById('recommendation-form');
+        const spinner = document.getElementById('spinner');
+        const recommendations = document.getElementById('recommendations');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            spinner.style.display = 'block';
+            recommendations.innerHTML = '';
+
+            const formData = new FormData(form);
+            const xhr = new XMLHttpRequest();
+            xhr.open('POST', 'http://grimmthething.pythonanywhere.com/recommendations');
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    spinner.style.display = 'none';
+                    recommendations.innerHTML = xhr.responseText;
+                } else {
+                    console.log('Request failed. Status: ' + xhr.status);
+                }
+            };
+            xhr.send(formData);
+        });
+    </script>
 </body>
+</html>
