--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
 
     <p style="font-size: 3em; display: inline-block;">
-    	<img id="logo" src="https://grimmthething.github.io/BGR/bglogo2nbg.png" height="60" width="30" alt="Logo">    	Board Game Recommendations
+    	<img id="logo" src="https://strategicmindset.github.io/BGR/bglogo2nbg.png" height="60" width="30" alt="Logo">    	Board Game Recommendations
     </p>
     <form id="recommendation-form" method="POST">
         <label for="preferences">Enter your board game preferences:</label>
