--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             const formData = new FormData(form);
             const xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://grimmthething.pythonanywhere.com/recommendations');
+            xhr.open('POST', 'http://strategicmindset.pythonanywhere.com/recommendations');
             xhr.onload = function() {
                 if (xhr.status === 200) {
                     spinner.style.display = 'none';
